--- a/params.yaml
+++ b/params.yaml
@@ -5,8 +5,10 @@ ingest:
   dcount: 3
 
 train:
-  img_path: Train/Train/JPEGImages
-  annot_path: Train/Train/Annotations
+  img_path: archive/Train/Train/JPEGImages
+  annot_path: archive/Train/Train/Annotations
+  aug_img_path:
+  aug_annot_path:
   dataset_name: karthika95_dataset_train
 
 # output:
@@ -16,8 +18,10 @@ train:
 
 test:
   model: output/model_final.pth
-  img_path: Val/Val/JPEGImages
-  annot_path: Val/Val/Annotations
+  img_path: archive/Val/Val/JPEGImages
+  annot_path: archive/Val/Val/Annotations
+  aug_img_path:
+  aug_annot_path:
   dataset_name: karthika95_dataset_test
 
 parameters:
