--- a/params.yaml
+++ b/params.yaml
@@ -1,28 +1,19 @@
 dataset:
-  path: /home/yln1kor/nikhil-test/Datasets/archive
+  path:  # Put path to dataset here
+
+# Datatset
+# --Images
+# --Annotations
 
 ingest:
   dcount: 3
 
-train:
-  img_path: Train/Train/JPEGImages
-  annot_path: Train/Train/Annotations
-  aug_img_path:
-  aug_annot_path:
-  dataset_name: karthika95_dataset_train
 
 # output:
 #   modelsave_path: output/model.h5
 #   loss_graph: output/lossplot.png
 #   test_split: output/test.txt
 
-test:
-  model: output/model_final.pth
-  img_path: Val/Val/JPEGImages
-  annot_path: Val/Val/Annotations
-  aug_img_path:
-  aug_annot_path:
-  dataset_name: karthika95_dataset_test
 
 parameters:
   # initial_lr: 1e-4 
