--- a/dvc.yaml
+++ b/dvc.yaml
@@ -50,7 +50,7 @@ stages:
     - data/infer
 
   train:
-    cmd: python3 src/train.py data/transform data/store data/train
+    cmd: python3 src/train.py data/transform data/train
     deps:
     - src/train.py
     - data/transform
