--- a/params.yaml
+++ b/params.yaml
@@ -9,8 +9,8 @@ ingest:
   dcount: 3
 
 split:
-  infer : 0.1
-  train : 0.3
+  val : 0.1
+  train : 0.9
 
 parameters:
   config_file: COCO-Detection/faster_rcnn_R_50_FPN_3x.yaml
