--- a/params.yaml
+++ b/params.yaml
@@ -13,14 +13,17 @@ split:
   val : 0.1
   train : 0.9
 
-parameters:
-  config_file: COCO-Detection/faster_rcnn_R_50_FPN_3x.yaml
-  NUM_WORKERS: 2
-  IMS_PER_BATCH: 2
-  BASE_LR: 0.00025
-  MAX_ITER: 1000
-  BATCH_SIZE_PER_IMAGE: 512
+detectron_parameters:
+  config_file: COCO-Detection/faster_rcnn_X_101_32x8d_FPN_3x.yaml
+  NUM_WORKERS: 4
+  IMS_PER_BATCH: 4
+  BASE_LR: 0.001
+  WARM_UP_ITERS: 1000
+  MAX_ITER: 1500
+  GAMMA: 0.05
+  BATCH_SIZE_PER_IMAGE: 64
   NUM_CLASSES: 1
+  EVAL_PERIOD: 500
 
 output:
   model: output/model_final.pth
