--- a/params.yaml
+++ b/params.yaml
@@ -22,8 +22,9 @@ detectron_parameters:
   MAX_ITER: 1500
   GAMMA: 0.05
   BATCH_SIZE_PER_IMAGE: 64
-  NUM_CLASSES: 1
+  NUM_CLASSES: 4
   EVAL_PERIOD: 500
+  SCORE_THRESH_TEST: 0.85
 
 output:
   model: output/model_final.pth
