--- a/params.yaml
+++ b/params.yaml
@@ -18,8 +18,8 @@ detectron_parameters:
   NUM_WORKERS: 4
   IMS_PER_BATCH: 4
   BASE_LR: 0.001
-  WARM_UP_ITERS: 1000
-  MAX_ITER: 1500
+  WARM_UP_ITERS: 500
+  MAX_ITER: 800
   GAMMA: 0.05
   BATCH_SIZE_PER_IMAGE: 64
   NUM_CLASSES: 1
@@ -34,3 +34,6 @@ output:
 
 option:
   custom: False
+
+version:
+  best: v3
