--- a/dvc.yaml
+++ b/dvc.yaml
@@ -18,21 +18,21 @@ stages:
     outs:
     - data/split
 
-  # augment:
-  #   cmd: python3 src/augment.py data/split data/augmented
-  #   deps:
-  #   - src/augment.py
-  #   - data/split
-  #   params:
-  #   - ingest.dcount
-  #   outs:
-  #   - data/augmented
+  augment:
+    cmd: python3 src/augment.py data/split data/augmented
+    deps:
+    - src/augment.py
+    - data/split
+    params:
+    - ingest.dcount
+    outs:
+    - data/augmented
 
   transform:
     cmd: python3 src/transform.py data/augmented data/split data/transform
     deps:
     - src/transform.py
-    # - data/augmented
+    - data/augmented
     - data/split
     params:
     - ingest.dcount
