Update compare VERSION 5

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -84,69 +84,7 @@ stages:
   exit:
     cmd: python3 src/exit.py data/store
     deps:
-    - data/exit
+    - src/exit.py
     - data/store
     params:
     - ingest.dcount
-
-#   infer:
-#     cmd: python3 src/infer.py data/prepared data/transformed
-#     deps:
-#     - src/infer.py
-#     - data/split
-#     params:
-#     - ingest.dcount
-#     outs:
-#     - data/infer
-
-#   train:
-#     cmd: python3 src/train.py data/split data/train
-#     deps:
-#     - src/infer.py
-#     - data/split
-#     params:
-#     - ingest.dcount
-#     outs:
-#     - data/train
-
-#   predict:
-#     cmd: python3 src/predict.py data/train data/predict data/store
-#     deps:
-#     - data/train
-#     - src/predict.py
-#     params:
-#     - ingest.dcount
-#     outs:
-#     - data/predict
-
-#   compare:
-#     cmd: python3 src/compare.py data/infer data/split data/store
-#     deps:
-#     - src/compare.py
-#     - data/predict
-#     - data/infer
-#     params:
-#     - ingest.dcount
-#     outs:
-#     - data/results
-  
-#   retrain:
-#     cmd: python3 src/retrain.py data/results data/retrained data/predict data/store
-#     deps:
-#     - src/retrain.py
-#     - data/results
-#     - data/predict
-#     params:
-#     - ingest.dcount
-#     outs:
-#     - data/retrain
-
-#   exit:
-#     cmd: python3 src/exit.py data/compare data/store
-#     deps:
-#     - src/exit.py
-#     - data/results
-#     params:
-#     - ingest.dcount
-#     outs:
-#     - data/store
